update api specs
